@@ -391,6 +391,17 @@
       </component>
     </version>
   </module>
+  <module name="evince">
+    <version release="HEAD">
+      <component name="evince" dir="evince" group="extras">
+	      <podir dir="po"/>
+	      <potname name="evince.pot"/>
+	      <branch name="HEAD"/>
+	      <regenerate/>
+	      <download/>
+        </component>
+    </version>
+  </module>
   <module name="evolution">
     <version release="gnome-2.8">
       <component name="evolution" dir="evolution" group="desktop">
