@@ -1,5 +1,9 @@
 2004-12-22  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Added evince to extras.
+
+2004-12-22  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: gnome-nettool has been branched.
 
 2004-12-22  Christian Persch  <chpe@cvs.gnome.org>
